--- a/recursos/css/style.css
+++ b/recursos/css/style.css
@@ -1,5 +1,6 @@
 :root {
 	--fuente-principal: "Asap", sans-serif;
+	--fuente-titulo: "Roboto", sans-serif;
 }
 
 /* generales */
@@ -19,6 +20,21 @@ body {
 	text-align: center;
 	margin: 0;
 	font-family: var(--fuente-principal);
+}
+
+h2 {
+	text-decoration: underline;
+}
+
+h3 {
+	background-color: black;
+	color: white;
+	display: inline-block;
+	padding: 0 50px;
+}
+
+a {
+	color: black;
 }
 
 img {
@@ -67,6 +83,7 @@ header {
 h1 {
 	margin: 0 1rem;
 	z-index: 1;
+	font-family: var(--fuente-titulo);
 }
 
 #enlace-jhon-cardona {
@@ -76,45 +93,54 @@ h1 {
 }
 
 #jhon-cardona {
-	animation: cambio-de-color 5s infinite;
+	/* padding: 10px;
+	color: black;
+	background-color: white; */
+	align-self: center;
 }
 
-@keyframes cambio-de-color {
-	0% {
-		color: #ff0000;
-	}
+#jhon {
+	color: black;
+	background-color: white;
+	padding: 10px;
+}
 
-	16% {
-		color: #ff5733;
-	}
+#cardona {
+	color: white;
+	background-color: black;
+	padding: 10px;
+}
 
-	33% {
-		color: #fffc33;
-	}
-
-	50% {
-		color: #26c21a;
-	}
-
-	66% {
-		color: #1a3cc2;
-	}
-
-	83% {
-		color: #941ac2;
-	}
-
-	100% {
-		color: #5a1ac2;
-	}
+#desarrollador-externo {
+	align-self: flex-end;
+	text-transform: capitalize;
 }
 
 #desarrollador {
-	align-self: flex-end;
-	color: wheat;
+	color: white;
+	padding: 10px;
+	background-color: black;
+	animation: blanco-negro 3s infinite;
 }
 
-@media only screen and (max-width: 768px) {
+@keyframes blanco-negro {
+	0% {
+		color: white;
+		background-color: black;
+	}
+
+	50% {
+		color: black;
+		background-color: white;
+	}
+
+	100% {
+		color: white;
+		background-color: black;
+	}
+}
+
+@media only screen and (min-width: 768px) {
 	#entrada-pagina-principal {
 		display: initial;
 	}
@@ -141,6 +167,7 @@ h1 {
 footer {
 	background-color: black;
 	color: white;
+	padding-top: 5px;
 }
 
 #navegacion-footer {
@@ -148,8 +175,14 @@ footer {
 	justify-content: space-around;
 }
 
-#navegacion-footer a {
-	color: gray;
+.enlace-nav {
+	color: white;
+	padding: 10px;
+}
+
+.enlace-nav:hover {
+	color: black;
+	background-color: white;
 }
 
 footer p {
@@ -157,9 +190,13 @@ footer p {
 }
 
 /* contacto */
-
 #contacto-titulo {
 	text-align: left;
+}
+
+#enlace-jhon-cardona-secundario {
+	display: flex;
+	text-decoration: none;
 }
 
 .elemento-contacto a {
@@ -171,4 +208,9 @@ footer p {
 	gap: 10px;
 	justify-content: center;
 	align-items: center;
+}
+
+.enlace-nav:hover {
+	color: black;
+	background-color: white;
 }
