--- a/recursos/css/style.css
+++ b/recursos/css/style.css
@@ -16,7 +16,7 @@ html {
 }
 body {
 	line-height: 2;
-	font-size: 1.6rem;
+	font-size: 2rem;
 	text-align: center;
 	margin: 0;
 	font-family: var(--fuente-principal);
@@ -50,9 +50,9 @@ li {
 	margin: 0;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
 	body {
-		font-size: 2rem;
+		font-size: 1.6rem;
 	}
 }
 
@@ -141,8 +141,17 @@ h1 {
 }
 
 @media only screen and (min-width: 768px) {
+	#enlace-jhon-cardona {
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
 	#entrada-pagina-principal {
-		display: initial;
+		background-color: black;
+	}
+
+	#video-fondo {
+		display: none;
 	}
 }
 
@@ -161,6 +170,19 @@ h1 {
 .proyecto-display a {
 	text-decoration: none;
 	color: blue;
+}
+
+@media only screen and (min-width: 768px) {
+	.grid-pagina-principal {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: 10px;
+	}
+
+	.proyecto-display {
+		grid-template-columns: 1fr;
+		grid-template-rows: 2fr 1fr;
+	}
 }
 
 /* footer */
