--- a/recursos/css/style.css
+++ b/recursos/css/style.css
@@ -169,6 +169,7 @@ h1 {
 .sobrePoner img {
 	max-height: 80%;
 	width: auto;
+	margin: 20px;
 }
 
 .btn-cerrar {
@@ -212,6 +213,21 @@ h1 {
 	.proyecto-display {
 		grid-template-columns: 1fr;
 		grid-template-rows: 2fr 1fr;
+	}
+
+	.sobrePoner {
+		padding: 20px;
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.btn-cerrar {
+		display: none;
+	}
+
+	.sobrePoner img {
+		max-height: 100%;
+		margin: 0;
 	}
 }
 
